feat: integrate AdminJS
