# app/admin/resources/utils/timestamps.ts
@@ -1,0 +1,20 @@
+export const readOnlyTimestamps = {
+  createdAt: {
+    isDisabled: true,
+    isVisible: {
+      list: true,
+      filter: true,
+      show: true,
+      edit: false,
+    },
+  },
+  updatedAt: {
+    isDisabled: true,
+    isVisible: {
+      list: true,
+      filter: true,
+      show: true,
+      edit: false,
+    },
+  },
+};
